--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes\\ananke"]
 	path = themes\\ananke
 	url = https://github.com/budparr/gohugo-theme-ananke.git
+
+[submodule "themes\\hugo-lodi-theme"]
+	path = themes\\hugo-lodi-theme
+	url = https://github.com/xaviablaza/hugo-lodi-theme.git
