--- a/config.toml
+++ b/config.toml
@@ -23,18 +23,8 @@ googleAnalytics = "UA-XXXXXXXX-Y"
     enable = true
     avatar = "avatar.jpg"
     subtitle = "Hi! I'm Rob, a IT Manager and Business Analyst from Sydney."
-    hero_right = ["**Currently doing consultancy work at Monpearte IT Solutions. Previously working at Peak Gold Mines as a Senior IT Officer.**", "I founded [User Experience Society](https://www.facebook.com/UXSoc/), the first student UX organization in the Philippines. For two years, we've had 20+ events with 30+ speakers for over 300 members and 500+ attendees. We've expanded to [California](https://www.facebook.com/profile.php?id=245708449193012) this year.", "I do a bit of writing as well. [Here's an article with a total of 21,000+ views to InVision & Medium](http://blog.invisionapp.com/ux-internship-wisdom/) talking about 50 things I learned spending 3 years as a UX intern.", "I help cultivate the design community in Manila too. I'm the youngest core member of [UX Philippines](https://www.facebook.com/groups/uxphilippines/) and I moderated a panel with some cool people for the [UXPH 2017 Conference](https://www.uxphilippines.com).", "I'm finishing my Bachelor's degree in Management Information Systems at the Ateneo de Manila University, expecting to graduate in 2018."]
-    resume = "robhgogarth_resume.docx"
-
-[params.process]
-    enable = true
-    title = "My Process"
-    subtitle = "Full Process Design"
-
-[params.case_studies]
-    enable = true
-    title = "Case Studies"
-    subtitle = "Selected Works"
+    hero_right = ["**Currently doing consultancy work at Monpearte IT Solutions. Previously working at Peak Gold Mines as a Senior IT Officer.**", "I am passoinate about making IT departments bring real benefits and change through continual innovation of bussiness processes and workflows"]
+    resume = "robhogarth_resume.docx"
 
 [params.footer]
     enable = true
