Update linked in profile link

--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ enableRobotsTXT = "true"
     favicon = "favicon.png"
     logo = "logo.png"
     email = "robhogarth@gmail.com"
-    linkedin = "https://www.linkedin.com/in/rob-hogarth-5a19151/"
+    linkedin = "https://www.linkedin.com/in/robhogarth"
 
 
 [params.nav]
