Update CSS and images

--- a/config.toml
+++ b/config.toml
@@ -9,8 +9,8 @@ enableRobotsTXT = "true"
     theme_color = "#182e49"
     description = "Portfolio of Rob Hogarth, IT Manager"
     description_photo = "portfolio.jpg"
-    favicon = "favicon.png"
-    logo = "logo.png"
+    favicon = "rh_favicon.png"
+    logo = "rh_logo.png"
     email = "robhogarth@gmail.com"
     linkedin = "https://www.linkedin.com/in/robhogarth"
 
